--- a/frontEnd/city.css
+++ b/frontEnd/city.css
@@ -14,6 +14,18 @@ body {
     webkit-tap-highlight-color: #fed136
 }
 
+.modal {
+ overflow-y: auto;
+}
+
+.modal-open {
+ overflow: auto;
+}
+
+.modal-open {
+    padding-right: 0px !important;
+}
+
 .btn-primary,
 .btn-xl,
 h1,
@@ -321,7 +333,7 @@ section h3.section-subheading {
 }
 
 section {
-    padding: 100px 0
+    padding: 30px 0
 }
 
 section h2.section-heading {
@@ -340,7 +352,7 @@ section h3.section-subheading {
 
 @media (min-width:768px) {
     section {
-        padding: 150px 0
+        padding: 30px 0
     }
 }
 
