Create index page and add images in new image directory

--- a/frontEnd/city.css
+++ b/frontEnd/city.css
@@ -268,7 +268,7 @@ fieldset[disabled] .btn-xl:hover {
 }
 
 header {
-    background-image: url(http://ensuitemedia.com/wp-content/uploads/2016/11/how-to-target-local-events-in-toronto-with-social-media-20.jpg);
+    background-image: url(images/torontoImage.jpg);
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
