added comments on city page

--- a/css/city.css
+++ b/css/city.css
@@ -17,7 +17,11 @@ body {
     color: #9d9d9d;
     cursor: pointer;
 }
+#commentText{
 
+	width: 100%;
+	height: 120px;
+}
 header {
 	height: 30%;
     background-repeat: no-repeat;
@@ -53,17 +57,6 @@ h2, h3 {
 
 .top-info {
 	font-weight: bold;
-}
-
-#compare-box {
-	height: 70px;
-	display: flex;
-}
-
-#compare-button {
-	align-self: center;
-	width: 60%;
-	min-width: 90px;
 }
 
 .glyphicon {
@@ -112,8 +105,7 @@ h2, h3 {
 }
 
 .rating-bar {
-	background-color: antiquewhite;
-	width: 80%;
+	background-color: #FAEBD7;
 	display: flex;
 	margin-top: 16px;
 	margin-bottom: 16px;
@@ -132,6 +124,7 @@ h2, h3 {
 	margin-bottom: 16px;
 	font-weight: bold;
 }
+
 
 p {
 	line-height: 2;
@@ -184,4 +177,24 @@ p {
 
 .modal-body form .input-error {
 	border-color: #fd625e;
+}
+.lessStars{
+	color: red;
+	margin: 0px;
+	padding: 0px;
+}
+.threeStars{
+	color: green;
+	margin: 0px;
+	padding: 0px;
+}
+.greaterStars{
+	color: blue;
+	margin: 0px;
+	padding: 0px;
+}
+.starContainer{
+display: flex;
+display: -webkit-flex;
+-moz-display: flex;
 }
