--- a/css/index.css
+++ b/css/index.css
@@ -1,111 +1,31 @@
-@import url('https://fonts.googleapis.com/css?family=Pacifico');
-html,body{
-	min-height:100%;
-	height:100%;
+html, body {
+	background-color: whitesmoke;
+	color: #222222;
 }
-p{
-	margin: 0px;
-}
-.navbar-nav li a,p{
-	padding:0px;
-}
+
 body {
-    overflow-x: hidden;
-    font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    webkit-tap-highlight-color: #fed136;
-	display: -webkit-flex;
-    display: flex;
-	-webkit-flex-direction: column;
-	flex-direction: column;
+	margin-top: 70px;
 }
-ul{
-	list-style-type: none;
-	padding: 0px;
-}
-ul li{
-	cursor: pointer;
-	padding: 15px 10px 10px 10px;
-	width: 200px;
-	margin-left:auto;
-	margin-right:auto;
-}
-ul li a{
-	color: whitesmoke;
-}
-div.row{
-	background-image: url(../images/indexPageTextBackground.jpg);
-	margin: 20px;
-	border-radius:25px;
-	color: whitesmoke;
-	display:flex;
-	align-items:center;
-	opacity: 0.8;
-    filter: alpha(opacity=80);
-}
+
 #brand-name {
     font-family: 'Pacifico', cursive;
     font-size: 18pt;
     color: whitesmoke;
 }
-#mainContainer{
-	display:flex;
-	flex:4;
-	align-items:center;
-	padding: 10px;
+
+#brand-name:hover {
+    color: #9d9d9d;
+    cursor: pointer;
 }
-.navbar-fixed-top{
-       	position:relative;
-		margin:0px;
+
+.glyphicon {
+	align-self: center;
+	margin-right: 10px;
 }
+
 @media (min-width:768px) {
-    .navbar-custom {
-        background-color: transparent;
-        padding: 25px 0;
-        -webkit-transition: padding .3s;
-        -moz-transition: padding .3s;
-        transition: padding .3s;
-        border: none;
-		position:relative;
-    }
-    .navbar-custom .navbar-brand {
-        font-size: 2em;
-        -webkit-transition: all .3s;
-        -moz-transition: all .3s;
-        transition: all .3s
-    }
-    .navbar-custom .navbar-nav>.active>a {
-        border-radius: 3px
-    }
-    .navbar-custom.affix {
-        background-color: #222;
-        padding: 10px 0
-    }
-    .navbar-custom.affix .navbar-brand {
-        font-size: 1.5em
-    }
+
 }
 @media screen and (max-width:850px){
-	div.row{
-		display:block;
-	}
-}
-main {
-    background-image: url(../images/torontoImage.jpg);
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-position: center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-	background-color:black;
-    text-align: center;
-    color: black;
-	-webkit-flex: 4;
-    -ms-flex: 4;
-	display:flex;
-	flex-direction:column;
-}
-article{
-	border: 1px solid red;
+
 }
