Content is now hidden and unhidden
If you are sign in you get all content, else you get some content.

--- a/css/city.css
+++ b/css/city.css
@@ -2,6 +2,9 @@ html, body {
 	background-color: whitesmoke;
 	color: #222222;
 }
+#commentEnterArea,#compareLink,#compareBox,#signOutButton{
+	display:none;
+}
 body {
 	margin-top: 70px;
 }
