Database,IndexPage, and CityPage
Display information from database,
Looked at index page image, we must cropped images
City page hides contribute buttons

--- a/css/city.css
+++ b/css/city.css
@@ -1,8 +1,11 @@
-html, body {
+html,body {
 	background-color: whitesmoke;
 	color: #222222;
 }
 #commentEnterArea,#compareLink,#compareBox,#signOutButton{
+	display:none;
+}
+.contribute{
 	display:none;
 }
 body {
