--- a/css/city.css
+++ b/css/city.css
@@ -37,7 +37,7 @@ header {
 	font-weight: bold;
 	display: flex;
 	width: 100%;
-	height: 51%;
+	height: 408px;
 }
 
 #header-text {
@@ -97,14 +97,16 @@ h2, h3 {
 }
 
 .col-sm-2 {
-	padding-top: 15px;
+	/*padding-top: 15px;*/
 }
 
 .col-sm-10 {
+	/*
 	padding-top: 15px;
 	padding-left: 0px;
 	padding-right: 0px;
 	display: flex;
+	*/
 }
 
 .small-info {
