Added graphs,edited button on index page,added some new styles to css and appropiate ids for graphs

--- a/css/city.css
+++ b/css/city.css
@@ -247,3 +247,8 @@ div.commentContainer{
 .modal-body form .input-error {
 	border-color: #fd625e;
 }
+
+.chart {
+  width: 100%; 
+  min-height: 250px;
+}
