--- a/css/city.css
+++ b/css/city.css
@@ -6,7 +6,7 @@ html,body {
 	display:none;
 }
 .contribute{
-	display:none;
+	/*display:none;*/
 }
 #brand-name {
     font-family: 'Pacifico', cursive;
@@ -40,12 +40,21 @@ header {
 	font-size: 56pt;
 	color: whitesmoke;
 }
+table{
+	height:100px;
+}
+td{
+	height:100px;
+	padding:5px;
+}
+img.attractImg{
+	height:100%;
+}
 div.fillHeight{
 }
 hr {
 	margin: 10px;
 }
-
 h2, h3 {
 	margin: 0px;
 }
@@ -85,6 +94,11 @@ h2, h3 {
 .row.ninety {
 	margin: auto;
 	width: 90%;
+	display:flex;
+}
+.row  > [class*='col-'] {
+  display: flex;
+  flex-direction:column;
 }
 
 #map-div{
@@ -122,9 +136,12 @@ h2, h3 {
 	margin-bottom: 16px;
 	font-weight: bold;
 }
-p {
+p{
 	font-size: 12pt;
 	margin:0px;
+}
+.paddingNeeded{
+	padding:2px;
 }
 p.inlineP{
 	padding-top:9px;
