--- a/css/city.css
+++ b/css/city.css
@@ -86,6 +86,7 @@ h2, h3 {
 .glyphicon {
 	align-self: center;
 	margin-right: 10px;
+	font-size: 16pt;
 }
 .glyphicon.overview {
 	margin: 12px;
@@ -148,7 +149,6 @@ h2, h3 {
 
 p{
 	font-size: 12pt;
-	margin:0px;
 }
 
 .btn-link {
