--- a/css/index.css
+++ b/css/index.css
@@ -159,7 +159,6 @@ ul .cityList{
 	}
 
 }
-
 @media screen and (min-width: 768px) and (max-width: 991px){
 	#login-username, #login-password {
 		width: 140px;
@@ -169,5 +168,11 @@ ul .cityList{
 @media screen and (max-width:991px){
 	.carousel .carousel-inner {
 		height:300px;
+	}
+}
+/* Graham add this use need to see if we keep it */
+@media screen and (min-width:1400px){
+	.carousel .carousel-inner {
+		height:500px;
 	}
 }
