--- a/css/city.css
+++ b/css/city.css
@@ -106,9 +106,14 @@ h2, h3 {
 
 .panel {
 	margin: 0px;
-	padding-top: 10px;
+	padding: 10px;
 	border: 1px solid #E6E9ED;
 }
+
+#map-panel{
+	padding: 0px;
+}
+
 .row {
 	margin: 0px;
 }
